--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,33 @@
 body {
-    background-color:black;
-    margin:0px;
-    overflow : hidden;
+  background-color:black;
+  margin:0px;
+  overflow : hidden;
+}
+
+h1 {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 48px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 1px #000, 3px 3px red, 4px 4px orange;
+
 }
 
 canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+canvas.stars {
+  /* Keep the start layer at the bottom since we add a black fill to this layer */
+  z-index: 0;
+}
+
+canvas.balls {
+  z-index: 1;
 }
